# amux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  test-notifications.sh
.claude/skills/amux2/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/amux-agent-wrapper/: Cargo.toml
crates/amux-agent-wrapper/src/: amux.rs  main.rs
crates/amux-agent-wrapper/src/agents/: claude.rs  gemini.rs  mod.rs
crates/amux-app/: Cargo.toml  build.rs
crates/amux-app/src/: find_bar.rs  fonts.rs  frame_update.rs  gemini_title.rs  hyperlinks.rs  ime.rs  input.rs  input_trace.rs  ipc_dispatch.rs  key_encode.rs  layout_ops.rs  main.rs  managed_pane.rs  menu_bar.rs  notifications_ui.rs  pane_render.rs  popup_theme.rs  rename_modal.rs  render.rs  selection.rs  settings_modal.rs  sidebar.rs  startup.rs  system_notify.rs  tab_icons.rs  theme.rs  title_sanitize.rs  windows_chrome.rs  workspace_ops.rs
crates/amux-browser/: Cargo.toml
crates/amux-browser/src/: history.rs  lib.rs  pane.rs
crates/amux-cli/: Cargo.toml
crates/amux-cli/src/: claude_hook.rs  cli.rs  codex_hook.rs  gemini_hook.rs  hook_action.rs  install.rs  main.rs  print.rs
crates/amux-core/: Cargo.toml
crates/amux-core/src/: config.rs  keys.rs  lib.rs  model.rs  shell.rs
crates/amux-ghostty-config/: Cargo.toml
crates/amux-ghostty-config/src/: lib.rs
crates/amux-ipc/: Cargo.toml
crates/amux-ipc/src/: client.rs  lib.rs  methods.rs  protocol.rs  server.rs  socket_path.rs
crates/amux-layout/: Cargo.toml
crates/amux-layout/src/: lib.rs
crates/amux-notify/: Cargo.toml
crates/amux-notify/src/: flash.rs  lib.rs  store.rs  types.rs
crates/amux-render-gpu/: Cargo.toml
crates/amux-render-gpu/src/: atlas.rs  callback.rs  color.rs  custom_glyphs.rs  decorations.rs  lib.rs  pipeline.rs  quad.rs  resources.rs  screen_line.rs  shape.rs  snapshot.rs  state.rs
crates/amux-render-gpu/src/shaders/: background.wgsl  foreground.wgsl  image.wgsl
crates/amux-render-soft/: Cargo.toml
crates/amux-render-soft/src/: lib.rs
crates/amux-session/: Cargo.toml
crates/amux-session/src/: lib.rs
crates/amux-term/: Cargo.toml
crates/amux-term/examples/: backend_compare.rs  ghostty_smoke.rs
crates/amux-term/src/: any_backend.rs  backend.rs  color.rs  config.rs  font.rs  ghostty_pane.rs  key_encoder.rs  lib.rs  mouse_encoder.rs  osc.rs  pane.rs
crates/amux-term/tests/: ghostty_integration.rs  pty_integration.rs
docs/: configuration.md
docs/superpowers/plans/: 2026-04-08-browser-ipc-hardening.md
packaging/msix/: AppxManifest.xml  README.md  amux.appinstaller  generate-icons.py  generate-icons.rs  generate-placeholder-icons.py  install-dev.ps1
resources/: default-config.toml
resources/shell-integration/: amux-bash-integration.bash  amux-pwsh-integration.ps1  amux-zsh-integration.zsh
resources/shell-integration/zsh/: .zlogin  .zprofile  .zshenv  .zshrc
