[workspace]
resolver = "2"
members = [
    "crates/amux-app",
    "crates/amux-cli",
    "crates/amux-term",
    "crates/amux-render-soft",
    "crates/amux-render-gpu",
    "crates/amux-ipc",
    "crates/amux-layout",
    "crates/amux-notify",
    "crates/amux-session",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/amux"

[workspace.dependencies]
# Terminal engine
wezterm-term = { git = "https://github.com/wezterm/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
wezterm-surface = { git = "https://github.com/wezterm/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
portable-pty = "0.9"

# Windowing
winit = "0.30"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"

# UI framework
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.31"

# Font rendering
cosmic-text = "0.12"

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# GPU rendering
wgpu = "24.0"
egui-wgpu = "0.31"
bytemuck = { version = "1", features = ["derive"] }

# Clipboard
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Notifications
notify-rust = "4"
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis", "mp3"] }
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }

# Menu bar
muda = "0.17"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"

# Error handling
anyhow = "1"

# Testing
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
amux-term = { path = "crates/amux-term" }
amux-ipc = { path = "crates/amux-ipc" }
amux-layout = { path = "crates/amux-layout" }
amux-notify = { path = "crates/amux-notify" }
amux-session = { path = "crates/amux-session" }
amux-render-soft = { path = "crates/amux-render-soft" }
amux-render-gpu = { path = "crates/amux-render-gpu" }
