[workspace]
resolver = "2"
members = [
    "crates/amux-app",
    "crates/amux-agent-wrapper",
    "crates/amux-cli",
    "crates/amux-core",
    "crates/amux-term",

    "crates/amux-render-gpu",
    "crates/amux-ipc",
    "crates/amux-layout",
    "crates/amux-notify",
    "crates/amux-session",
    "crates/amux-ghostty-config",
    "crates/amux-browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/daveowenatl/amux"

[workspace.dependencies]
# Encoding
base64 = "0.22"

# Terminal engine
portable-pty = "0.9"
libghostty-vt = "0.1"

# Windowing
winit = "0.30"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"

# UI framework
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.31"

# Font rendering
cosmic-text = "0.12"

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "ico"] }

# GPU rendering
wgpu = "24.0"
egui-wgpu = "0.31"
bytemuck = { version = "1", features = ["derive"] }

# Clipboard
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Notifications
notify-rust = "4"
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis", "mp3"] }
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }

# Menu bar (disable libxdo on Linux — only needed for simulating key events, not menus)
muda = { version = "0.17", default-features = false, features = ["gtk"] }
raw-window-handle = "0.6"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Testing
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
amux-core = { path = "crates/amux-core" }
amux-term = { path = "crates/amux-term" }
amux-ipc = { path = "crates/amux-ipc" }
amux-layout = { path = "crates/amux-layout" }
amux-notify = { path = "crates/amux-notify" }
amux-session = { path = "crates/amux-session" }
amux-render-gpu = { path = "crates/amux-render-gpu" }
amux-ghostty-config = { path = "crates/amux-ghostty-config" }
amux-browser = { path = "crates/amux-browser" }

# Patch libghostty-vt and libghostty-vt-sys to a fork that extends the build
# script's artifact detection to Windows (MSVC + GNU targets) AND patches
# uucode v0.2.0 in the zig global cache to work around its `setCwd(b.path(""))`
# bug that breaks builds on ARM64 Windows (both native and x86_64-under-
# emulation). The crates.io release hardcodes `libghostty-vt.so.0.1.0` as the
# expected shared library filename, which panics on Windows because Zig emits
# `ghostty-vt.dll` + `ghostty-vt.lib` instead. The fork cherry-picks the two
# unpublished `feat/windows-ci` commits from upstream on top of
# upstream/master, with the ghostty commit pinned back to `bebca84` (matching
# crates.io 0.1.1) to avoid a newer ghostty xcframework build-step regression
# that breaks macOS, plus a uucode cache-patch commit on top (refs amux #188).
#
# Upstream tracking: https://github.com/uzaaft/libghostty-rs branches
# `feat/windows-ci` + `static-linking`. Plan: open a PR against upstream once
# amux's Windows CI is green with this patch, then drop the patch block when
# a new crates.io version ships. Also: the uucode patch can be dropped
# entirely once ghostty bumps past uucode 0.2.0 or upstream uucode fixes the
# `b.path("")` resolution bug.
[patch.crates-io]
libghostty-vt = { git = "https://github.com/daveowenatl/libghostty-rs", rev = "df2c639f681f1b0c96dfcb1b3345176e89a4a613" }
libghostty-vt-sys = { git = "https://github.com/daveowenatl/libghostty-rs", rev = "df2c639f681f1b0c96dfcb1b3345176e89a4a613" }
