[package]
name = "amux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux main binary: GUI + event loop"

[features]
default = ["gpu-renderer"]
gpu-renderer = ["dep:amux-render-gpu"]

[dependencies]
amux-term = { workspace = true }
amux-render-gpu = { workspace = true, optional = true }
wezterm-term = { workspace = true }
wezterm-surface = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = { workspace = true }
amux-ipc = { workspace = true }
amux-layout = { workspace = true }
amux-notify = { workspace = true }
amux-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
