[package]
name = "amux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux main binary: GUI + event loop"

[features]
default = ["gpu-renderer"]
gpu-renderer = ["dep:amux-render-gpu"]
libghostty = ["amux-term/libghostty"]

[dependencies]
amux-core = { workspace = true }
amux-term = { workspace = true }
amux-render-gpu = { workspace = true, optional = true }
wezterm-term = { workspace = true }
wezterm-surface = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = { workspace = true }
amux-ipc = { workspace = true }
amux-layout = { workspace = true }
amux-notify = { workspace = true }
amux-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
toml = { workspace = true }
notify-rust = { workspace = true }
rodio = { workspace = true }
muda = { workspace = true }
winit = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = { workspace = true }
