[package]
name = "amux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux main binary: GUI + event loop"

[features]
default = ["gpu-renderer"]
gpu-renderer = ["dep:amux-render-gpu"]

[dependencies]
amux-core = { workspace = true }
amux-term = { workspace = true }
amux-ghostty-config = { workspace = true }
amux-render-gpu = { workspace = true, optional = true }
eframe = { workspace = true }
egui = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = { workspace = true }
amux-ipc = { workspace = true }
amux-layout = { workspace = true }
amux-notify = { workspace = true }
amux-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
toml = { workspace = true }
notify-rust = { workspace = true }
rodio = { workspace = true }
winit = { workspace = true }
uuid = { workspace = true }
amux-browser = { workspace = true }
raw-window-handle = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
# muda builds the macOS app-global menu bar installed into NSApp.
# Windows/Linux draw their menu bar via egui (see `menu_bar::draw_egui_menu_bar`)
# and don't need muda at all.
muda = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Used by `windows_chrome` to enable dark-mode themed controls + dark
# title bar (see amux #190). Kept on 0.60 to align with versions
# already in Cargo.lock via transitive deps.
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
sysinfo = { workspace = true }
