[package]
name = "amux-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wry = { version = "0.55", features = ["devtools"] }
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
base64.workspace = true
