[package]
name = "amux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux CLI binary (socket client)"

[[bin]]
name = "amux"
path = "src/main.rs"

[dependencies]
amux-ipc = { workspace = true }
amux-session = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
