[package]
name = "amux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux shared logic: key encoding, data model, config, session management, IPC dispatch"

[dependencies]
amux-layout = { workspace = true }
# Note: amux-term is NOT a dependency here to avoid cycles (amux-term depends on amux-core).
# Font defaults are defined locally in config.rs.
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
