[package]
name = "amux-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux socket server + JSON-RPC protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
