[package]
name = "amux-render-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux wgpu + cosmic-text GPU renderer"

[dependencies]
wgpu = { workspace = true }
egui-wgpu = { workspace = true }
egui = { workspace = true }
wezterm-term = { workspace = true }
cosmic-text = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
wezterm-surface = { workspace = true }
amux-term = { workspace = true }
