[package]
name = "amux-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "amux session persistence (save/restore JSON)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
amux-layout = { workspace = true }

[dev-dependencies]
tempfile = "3"
