[package]
name = "amux-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal pane abstraction wrapping wezterm-term + portable-pty"

[dependencies]
amux-core = { workspace = true }
wezterm-term = { workspace = true }
wezterm-surface = { workspace = true }
portable-pty = { workspace = true }
winit = { workspace = true }
url = { workspace = true }
cosmic-text = { workspace = true }
tracing = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
