[package]
name = "amux-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal pane abstraction wrapping libghostty-vt + portable-pty"

[dependencies]
amux-core = { workspace = true }
portable-pty = { workspace = true }
libghostty-vt = { workspace = true }
winit = { workspace = true }
url = { workspace = true }
cosmic-text = { workspace = true }
tracing = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }

[[example]]
name = "ghostty_smoke"

[dev-dependencies]
tracing-subscriber = { workspace = true }
